--- a/templates/search.html
+++ b/templates/search.html
@@ -3,7 +3,18 @@
 {%block title %}Search{%endblock%}
 
 {%block body%}
-<form action="/book_results" method="post"  class="form-horizontal">
+
+{% if errors != None %}
+    <div class="alert-warning">
+        <ul>
+            {% for err in errors %}
+                <li>{{ err }}</li>
+            {% endfor %}
+        </ul>
+    </div>
+{% endif %}
+
+<form action="/results" method="post"  class="form-horizontal">
 
   <div class="form-group row">
       <label for="title" class="col-4 col-form-label">Title</label> 
@@ -51,7 +62,14 @@
         <input id="isbn" name="isbn" placeholder="10-digit alphanumeric ISBN code" type="text" class="form-control" aria-describedby="isbnHelpBlock"> 
         <span id="isbnHelpBlock" class="form-text text-muted">Case insensitive</span>
       </div>
-    </div> 
+    </div>
+    <div class="form-check">
+        <label for="isbn" class="col-4 col-form-label">&nbsp;</label>
+      <label class="form-check-label">
+        <input type="checkbox" class="form-check-input" name="use_strict" id="use_strict" value="1">
+        Strict search ("it" finds "it" but not "Fit for fun")
+      </label>
+    </div>
     <div class="form-group row">
       <div class="offset-4 col-8">
         <button name="submit" type="submit" class="btn btn-primary">Submit</button>
