--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,4 +5,50 @@
 body {
   padding: 2%;
 }
+
+.title {
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+
+.author {
+  font-weight: bold;
+}
+
+.isbn {
+  font-size: 0.75rem;
+}
+
+.rating[data-rating='0'] .rating__item:nth-child(-n + 0):after, .rating[data-rating='0.5'] .rating__item:nth-child(-n + 0):after, .rating[data-rating='1'] .rating__item:nth-child(-n + 1):after, .rating[data-rating='1.5'] .rating__item:nth-child(-n + 1):after, .rating[data-rating='2'] .rating__item:nth-child(-n + 2):after, .rating[data-rating='2.5'] .rating__item:nth-child(-n + 2):after, .rating[data-rating='3'] .rating__item:nth-child(-n + 3):after, .rating[data-rating='3.5'] .rating__item:nth-child(-n + 3):after, .rating[data-rating='4'] .rating__item:nth-child(-n + 4):after, .rating[data-rating='4.5'] .rating__item:nth-child(-n + 4):after, .rating[data-rating='5'] .rating__item:nth-child(-n + 5):after, .rating[data-rating='5.5'] .rating__item:nth-child(-n + 5):after {
+  content: "\f005";
+}
+
+.rating[data-rating='0.5'] .rating__item:nth-child(1):after, .rating[data-rating='1.5'] .rating__item:nth-child(2):after, .rating[data-rating='2.5'] .rating__item:nth-child(3):after, .rating[data-rating='3.5'] .rating__item:nth-child(4):after, .rating[data-rating='4.5'] .rating__item:nth-child(5):after, .rating[data-rating='5.5'] .rating__item:nth-child(6):after {
+  content: "\f123";
+}
+
+.rating {
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  color: #900;
+}
+
+.rating__item {
+  font-size: 24px;
+  display: block;
+  font-family: FontAwesome;
+}
+
+.rating__item::after {
+  content: '\f006 ';
+}
 /*# sourceMappingURL=style.css.map */
