Nicer header, license free icon

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1,5 +1,7 @@
 .col-form-label {text-align: right;}
 body {padding: 2%}
+.header {margin-bottom: 14px;}
+
 .title {
     font-weight: bold;
     font-size: 1.1rem;
