--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,6 @@
-<div class="header">
-    <div class="row">
-      <div class="col-12">
-            CS50w Project 1 - Peerky    
+<footer class="page-footer bg-light footer-light">
+    <div class="footer-copyright text-center py-3">© 2018 Copyright:
+        CS50w Project 1 - Peerky
       </div>
-    </div>
-</div>
+            
+</footer>
