Added ability to write and edit reviews

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -2,6 +2,8 @@
 body {padding: 2%}
 .header {margin-bottom: 14px;}
 
+.spacer {margin-bottom: 14px;}
+
 .title {
     font-weight: bold;
     font-size: 1.1rem;
