Changed footer text

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 <footer class="page-footer bg-light footer-light">
-    <div class="footer-copyright text-center py-3">© 2018 Copyright:
+    <div class="footer-copyright text-center py-3">
         CS50w Project 1 - Peerky
       </div>
             
