added video url to readme and finishing touches

--- a/templates/book_results.html
+++ b/templates/book_results.html
@@ -3,6 +3,7 @@
 {%block title %}Search results{%endblock%}
 
 {%block body%}
+{{sql}}
     <h3>Results from book search</h3>
 
     <ul class="list-group">
